--- a/deploy.yml
+++ b/deploy.yml
@@ -1,1 +1,17 @@
+- name: Deploy POC-9 Docker container
+  hosts: webservers
+  become: yes
+  tasks:
+    - name: Pull Docker image
+      docker_image:
+        name: poc9-demo
+        source: local
+
+    - name: Run Docker container
+      docker_container:
+        name: poc9-container
+        image: poc9-demo
+        state: started
+        ports:
+          - "8090:8090"
 
